<resources>

    <string name="app_name">Real Estate Manager</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data">No data</string>

    <!-- MainActivity.kt -->
    <string name="navigation_drawer_open" translatable="false">"Open navigation drawer"</string>
    <string name="navigation_drawer_close" translatable="false">"Close navigation drawer"</string>
    <string name="add_real_estate_toolbar">Add real estate</string>
    <string name="edit_real_estate_toolbar">Edit real estate</string>
    <string name="search_real_estate_toolbar">Search real estate</string>

    <!-- BaseFragment.kt -->
    <string name="permission_denied">Permission denied</string>

    <!-- CreatorFragment.kt -->
    <string name="title_marker">Real Estate</string>
    <string name="creation_photo_already_present">This photo is already present in database</string>
    <string name="creation_photo_cancel">Photo canceled</string>
    <string name="creation_video_cancel">Video canceled</string>
    <string name="creator_search_cancel">Search canceled</string>
    <string name="no_pois">No point of interest has been selected</string>
    <string name="no_pois_search">No point of interest searched</string>
    <string name="no_distance">No distance to search point of interest</string>
    <string name="no_address">No address</string>
    <string name="message_creator_user_choice">Are you sure to create this real estate?</string>

    <!-- DetailsFragment.kt -->
    <string name="details_characteristics">Surface: %1$.2f m2\nNumber of rooms: %2$d</string>
    <string name="details_no_description">No description</string>
    <string name="details_no_street_number">[Street Number: No data]</string>
    <string name="details_no_street">[Street: No data]</string>
    <string name="details_no_city">[City: No data]</string>
    <string name="details_no_country">[Country: No data]</string>
    <string name="details_impossible">Detail impossible: To choice a real estate</string>

    <!-- EditFragment.kt -->
    <string name="edit_no_type">No type</string>
    <string name="edit_no_price">No price</string>
    <string name="edit_impossible">Edit impossible</string>
    <string name="message_edit_user_choice">Are you sure to update this real estate?</string>

    <!-- SearchFragment.kt -->
    <string name="error_into_price_seekbar">Error into price bars</string>
    <string name="error_into_surface_seekbar">Error into surface bars</string>
    <string name="error_into_room_seekbar">Error into room bars</string>

    <!-- SettingsDialogFragment.kt -->
    <string name="title_settings_dialog_fragment">Settings</string>

    <!-- PhotoDialogFragment.kt -->
    <string name="title_photo_dialog_fragment">Photo selected</string>

    <!-- RealEstateNotification.kt & RealEstateViewModel.kt -->
    <string name="notification_title">Notification Real Estate Manager</string>
    <string name="notification_channel_name">Notification for Real Estate Manager</string>
    <string name="notification_channel_description">This channel is the channel for Real Estate Manager.</string>
    <string name="notification_message">Creation of RealEstate\n\ttype: %1$s\n\tPrice: %2$.2f\$</string>

    <!-- activity_main_menu_drawer.xml -->
    <string name="menu_drawer_settings">SETTINGS</string>
    <string name="menu_drawer_real_estates">REAL ESTATES</string>
    <string name="menu_drawer_search">COMPLEX SEARCH</string>

    <!-- nav_graph.xml -->
    <string name="navigation_list_name">Real estate list</string>
    <string name="navigation_details_name">Details</string>
    <string name="navigation_settings_name">Settings</string>
    <string name="navigation_location_name">Location</string>
    <string name="navigation_creator_name">Creator</string>
    <string name="navigation_edit_name">Edit</string>
    <string name="navigation_search_name">Search</string>

    <!-- item.photo.xml & item_real_estate.xml -->
    <string name="menu_drawer_details">DETAILS</string>

    <!-- fragment_creator.xml & dialog_selected_photo.xml -->
    <string name="hint_type">Type</string>
    <string name="hint_price">Price</string>
    <string name="hint_surface">Surface</string>
    <string name="hint_number_of_room">Number of room</string>
    <string name="hint_description">Description</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_post_code">Post code</string>
    <string name="hint_country">Country</string>
    <string name="hint_date">Effective date</string>
    <string name="hint_distance">Search radius (meter)</string>
    <string name="distance_poi">200</string>
    <string name="creator_enable">Is enable</string>
    <string name="creator_real_estate_lack_information">Lack of information</string>
    <string name="search_poi_button">Search</string>
    <string-array name="creator_types">
        <item>Flat</item>
        <item>House</item>
        <item>Duplex</item>
        <item>Loft</item>
        <item>Penthouse</item>
        <item>Manor</item>
        <item>Other</item>
    </string-array>
    <string name="chip_school">School</string>
    <string name="chip_restaurant">Restaurant</string>
    <string name="chip_doctor">Doctor</string>
    <string name="chip_hospital">Hospital</string>
    <string name="chip_airport">airport</string>

    <!-- fragment_details.xml -->
    <string name="title_media_details">Media</string>
    <string name="title_description_details">Description</string>
    <string name="title_description_characteristics">Characteristics</string>
    <string name="title_description_address">Address</string>
    <string name="title_description_poi">Points of interest</string>
    <string name="select_price_range">Select price range</string>

    <!-- fragment_search.xml -->
    <string name="select_price_min">Select min price</string>
    <string name="select_price_max">Select max price</string>
    <string name="select_min_surface">Select min surface</string>
    <string name="select_max_surface">Select max surface</string>
    <string name="select_min_room">Select min room</string>
    <string name="select_max_room">Select max room</string>

</resources>