<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Add -->
    <item
        android:id="@id/navigation_creatorFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/add_real_estate_toolbar"
        app:showAsAction="ifRoom"/>

    <!-- Edit -->
    <item
        android:id="@+id/toolbar_menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_real_estate_toolbar"
        app:showAsAction="ifRoom"/>

    <!-- Search -->
    <item
        android:id="@id/navigation_locationFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search_real_estate_toolbar"
        app:showAsAction="ifRoom"/>

</menu>