<?xml version="1.0" encoding="utf-8"?>

<!-- ConstraintLayout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- ImageView: Photo -->
    <ImageView
        android:id="@+id/dialog_selected_photo_image"
        android:layout_width="@dimen/image_view_item_photo_width"
        android:layout_height="@dimen/image_view_item_photo_height"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_big"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_selected_photo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        tools:scaleType="centerCrop"/>

    <!-- TextInputLayout: Description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_selected_photo_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_little"
        app:layout_constraintTop_toBottomOf="@id/dialog_selected_photo_image"
        app:layout_constraintBottom_toTopOf="@id/dialog_selected_photo_yes"
        app:layout_constraintStart_toStartOf="@id/dialog_selected_photo_image"
        app:layout_constraintEnd_toEndOf="@id/dialog_selected_photo_image"
        app:hintEnabled="true"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@android:color/transparent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <!-- TextInputEditText: Description -->
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_description"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- MaterialButton: Yes button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_selected_photo_yes"
        android:layout_width="@dimen/width_dialog_button"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_little"
        app:layout_constraintTop_toBottomOf="@id/dialog_selected_photo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/yes"
        style="@style/BorderlessButtonStyle"/>

    <!-- MaterialButton: No button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_selected_photo_no"
        android:layout_width="@dimen/width_dialog_button"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_little"
        app:layout_constraintTop_toTopOf="@id/dialog_selected_photo_yes"
        app:layout_constraintBottom_toBottomOf="@id/dialog_selected_photo_yes"
        app:layout_constraintEnd_toStartOf="@id/dialog_selected_photo_yes"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no"
        style="@style/BorderlessButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>