<?xml version="1.0" encoding="utf-8"?>

<!-- CoordinatorLayout -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.SearchFragment">

    <!-- ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Guideline: Horizontal -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <!-- NestedScrollView -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- TextView: Title price min -->
                <TextView
                    android:id="@+id/title_min_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/select_price_min"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextViewStyle1"/>

                <!-- SeekBar: Price min -->
                <SeekBar
                    android:id="@+id/fragment_search_seekBar_price_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/title_min_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="10000000"
                    android:progress="1"/>

                <!-- TextView: Title price max -->
                <TextView
                    android:id="@+id/title_max_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_search_seekBar_price_min"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/select_price_max"
                    style="@style/TextViewStyle1"/>

                <!-- SeekBar: Price max -->
                <SeekBar
                    android:id="@+id/fragment_search_seekBar_price_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/title_max_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="10000000"
                    android:progress="1"/>

                <!-- TextView: Title surface min -->
                <TextView
                    android:id="@+id/title_min_surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_search_seekBar_price_max"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/select_min_surface"
                    style="@style/TextViewStyle1"/>

                <!-- SeekBar: Surface min -->
                <SeekBar
                    android:id="@+id/fragment_search_seekBar_min_surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/title_min_surface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="10000000"
                    android:progress="1"/>

                <!-- TextView: Title surface max -->
                <TextView
                    android:id="@+id/title_max_surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_search_seekBar_min_surface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/select_max_surface"
                    style="@style/TextViewStyle1"/>

                <!-- SeekBar: Surface max -->
                <SeekBar
                    android:id="@+id/fragment_search_seekBar_max_surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_little"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintTop_toBottomOf="@+id/title_max_surface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:max="10000000"
                    android:progress="1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- View: Vertical divider -->
        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintBottom_toTopOf="@id/fragment_search_RecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_search_RecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_real_estate" />

        <!-- MaterialTextView: No data -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_search_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextViewStyle1"
            android:text="@string/no_data"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FloatingActionButton -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_search_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_search"
        style="@style/FloatingActionButtonStyle"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>